# 3DCVdeveloper-3D-geometric-reconstruction

./: readme.md  多楼层室内环境下的三维几何重建-提交文档.docx
代码/: CMakeLists.txt  Readme.md  build.sh  orbbec.yaml  run_cam.sh  run_reconstruction.sh
代码/Device/Include/: OniCAPI.h  OniPlatform.h  OniVersion.h  OpenNI.h  PS1080.h
代码/Device/Include/Driver/: OniDriverAPI.h
代码/Device/Redist/OpenNI2/Drivers/: orbbec.ini
代码/examples/: CMakeLists.txt  reconstruction.cpp  run_cam.cpp
代码/include/: orbbec.h  timestamp.h
代码/src/: CMakeLists.txt  orbbec.cpp  timestamp.cpp
